Added two new items to test1 in the testing suite: author_firstname_initials and editor_firstname_initials.

--- a/test/test1.bib
+++ b/test/test1.bib
@@ -295,3 +295,19 @@
   pages = {9--15},
   doi = {10.1007/BF03025367}
 }
+
+%% Part two of testing that crossrefs are correctly applied.
+@EDITOR_FIRSTNAME_INITIALS{editor_firstname_initials,
+  title = {Polarization: Measurement, Analysis, and Remote Sensing X},
+  year = {2012},
+  editor = {David B. Chenault and Dennis H. Goldstein},
+  volume = {8364},
+  series = {procspie}
+}
+
+%% Test the ability to parse nested italics, so that even-order italics are written with \textup{} rather than \textit{}.
+@AUTHOR_FIRSTNAME_INITIALS{author_firstname_initials,
+  title = {Experimental realization of Einstein-Podolsky-Rosen-Bohm \textit{Gedenkenexperiment}: a new violation of Bell's inequalities},
+  author = {Alain Aspect and Philippe Grangier and G{\'e}rard Roger},
+  year = {1982}
+}
