--- a/test/test1.bib
+++ b/test/test1.bib
@@ -311,3 +311,12 @@
   author = {Alain Aspect and Philippe Grangier and G{\'e}rard Roger},
   year = {1982}
 }
+
+%% Test that the "edition_ordinal" is properly generated from the "edition" field.
+@edition_ordinal{edition_ordinal,
+  title = {Principles of Optics},
+  year = {1999},
+  author = {Max Born and Emil Wolf},
+  publisher = {Cambridge Univ. Press},
+  edition = 7
+}
