Added the 'for_japanese_audience' user variable in test5 of the testing suite. This turned out to dig up two bugs in some very old code -- the code for evaluating a [...|...] train of options and see if the variables inside each block of the train are all defined. These bugs are now fixed.\n\nAdditionally, implementing this new user variable required a rather long template, so I decided to implement a line continuation syntax, when a line ends with '...'. So far it appears to be working fine.

--- a/test/test5.bib
+++ b/test/test5.bib
@@ -36,5 +36,22 @@
   journal = {Omni},
   year = {1989},
   volume = {11},
+  number = {5},
   pages = {64--66, 87--92, 94}
+}
+
+%% This example entry was downloaded from http://tex.stackexchange.com/questions/28010/how-to-create-multilingual-english-japanese-bibliographies-with-biblatex-bib
+%% I fixed a couple of typos from the original, and modified the field names.
+@collection{yanagida,
+  address_ja = {京都},
+  address = {Kyōto},
+  editor_ja = {柳田聖山},
+  editor = {Yanagida Seizan},
+  publisher_ja = {中文出版社},
+  publisher = {Chūbun shuppansha},
+  title_ja = {禪學叢書},
+  title_romaji = {Zengaku sôsho},
+  title = {Collected Materials for the Study of Zen},
+  volume = {10},
+  year = {1974-1977}
 }
