Added the Bibdata class method generate_bibitem_label() to bibulous.py. With the new split between options 'citation_sort' and 'citation_label', a bunch of the BBL files in the testing quite had changes. I also made some cosmetic changes to bibulous_test.py.

--- a/test/test1.bib
+++ b/test/test1.bib
@@ -320,3 +320,17 @@
   publisher = {Cambridge Univ. Press},
   edition = 7
 }
+
+%% Test that the citation reference label is generated correctly.
+@CITATION_LABEL{citation_label1,
+  title = {Looney tunes},
+  author = "Daffy D. Duck",
+  year = {2001},
+}
+
+%% Test that the citation reference label is generated correctly, this time when no author but only editor.
+@CITATION_LABEL{citation_label2,
+  title = {Looney tunes},
+  editor = "Daffy D. Duck",
+  year = {2001},
+}
