--- a/test/test5.bib
+++ b/test/test5.bib
@@ -42,7 +42,7 @@
 
 %% This example entry was downloaded from http://tex.stackexchange.com/questions/28010/how-to-create-multilingual-english-japanese-bibliographies-with-biblatex-bib
 %% I fixed a couple of typos from the original, and modified the field names.
-@collection{yanagida,
+@collection{柳田1974,
   address_ja = {京都},
   address = {Kyōto},
   editor_ja = {柳田聖山},
