Modified 'test2' in the testing suite to use citekeys for reference labels rather than just numeric values. Also made some cosmetic changes to test8.

--- a/test/test8.bib
+++ b/test/test8.bib
@@ -10,7 +10,7 @@
 
 @symbol{sym:lambda,
    name = "$\lambda$",
-   description = {Indictes an eigenvalue in the mathematics  of linear algebra.},
+   description = {Indicates an eigenvalue in the mathematics  of linear algebra.},
 }
 
 @glossary{AD,
