Added a case-sensitive test to test1 of the testing suite. This turned up a surprisingly tricky bug to fix. I had to add an option 'case_sensitive_fieldnames' and, to make sure it got used correctly, I had to change the order in which files get parsed to make sure that the BST files get parsed before the BIB files.

--- a/test/test1.bib
+++ b/test/test1.bib
@@ -334,3 +334,14 @@
   editor = "Daffy D. Duck",
   year = {2001},
 }
+
+%% Test having an entry with capitalized fields.
+@CAPITALIZED_FIELD_NAMES1{capitalized_field_names1,
+    AUTHOR="H. Schmidt",
+    TITLE="Quantum-mechanical random-number generator",
+    JOURNAL={J. Appl. Phys.},
+    VOLUME={41},
+    NUMBER={2},
+    YEAR={1970},
+    PAGES={462--468}
+}
