Added another multilingual entry into test1 of the testing suite. This includes some right-to-left script and Unicode mathematics, but easily passed the test without error.

--- a/test/test1.bib
+++ b/test/test1.bib
@@ -345,3 +345,20 @@
     YEAR={1970},
     PAGES={462--468}
 }
+
+%% Exercise some Unicode a little.
+@MULTILINGUAL{multilingual,
+  author = {Someone},
+  title = {ユーザー別サイト
+           体中文
+           크로스 플랫폼으로
+מדורים מבוקשים
+أفضل البحوث
+           Σὲ γνωρίζω ἀπὸ
+           Десятую Международную
+           แผ่นดินฮั่นเสื่อมโทรมแสนสังเวช
+           ∮ E⋅da = Q, n → ∞, ∑ f(i) = ∏ g(i)
+           français langue étrangère
+           mañana olé},
+  year = 2222
+}
