--- a/test/test3_authorextract.bib
+++ b/test/test3_authorextract.bib
@@ -1,19 +1,19 @@
 @ARTICLE{Tukey:1949:MSFa,
   authorlist = {[{u'middle': u'W.', u'last': u'Tukey', u'first': u'John'}]},
   bibsource = {http://www.math.utah.edu/pub/bibnet/authors/t/tukey-john-w.bib; http://www.math.utah.edu/pub/tex/bib/amstat.bib},
-  acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
-  journal = {The American Statistician},
   author = {John W. Tukey},
+  acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
+  title = {Memorandum on statistics in the {Federal Government}, {Part I}},
+  journal = {The American Statistician},
+  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
   bibdate = {Tue May 31 14:45:43 MDT 2011},
   number = {1},
   month = {????},
   volume = {3},
   ASnumber = {22},
-  ISSN-L = {0003-1305},
-  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
   year = {1949},
   PMnumber = {32},
-  title = {Memorandum on statistics in the {Federal Government}, {Part I}},
+  ISSN-L = {0003-1305},
   pages = {6--17},
   CODEN = {ASTAAJ},
   fjournal = {The American Statistician}
@@ -22,19 +22,19 @@
 @ARTICLE{Tukey:1986:SS,
   authorlist = {[{u'middle': u'W.', u'last': u'Tukey', u'first': u'John'}]},
   bibsource = {http://www.math.utah.edu/pub/bibnet/authors/t/tukey-john-w.bib; http://www.math.utah.edu/pub/tex/bib/amstat.bib},
-  acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
-  journal = {The American Statistician},
   author = {John W. Tukey},
+  acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
+  title = {Sunset salvo},
+  journal = {The American Statistician},
+  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
   bibdate = {Tue May 31 14:45:43 MDT 2011},
   number = {??},
   month = {????},
   volume = {40},
   ASnumber = {137},
-  ISSN-L = {0003-1305},
-  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
   year = {1986},
   PMnumber = {308},
-  title = {Sunset salvo},
+  ISSN-L = {0003-1305},
   pages = {72--76},
   CODEN = {ASTAAJ},
   fjournal = {The American Statistician}
@@ -44,41 +44,41 @@
   DOI = {http://dx.doi.org/10.1214/aos/1176349533},
   bibsource = {http://www.math.utah.edu/pub/bibnet/authors/t/tukey-john-w.bib; http://www.math.utah.edu/pub/tex/bib/amstat.bib},
   author = {John W. Tukey},
-  acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
   URL = {http://projecteuclid.org/euclid.aos/1176349533; http://www.jstor.org/stable/2241189},
+  title = {Discussion: Projection Pursuit},
   journal = {The American Statistician},
   ISSN = {0003-1305 (print), 1537-2731 (electronic)},
   bibdate = {Sun Jun 05 14:54:48 2011},
   number = {2},
   month = {6},
   volume = {39},
-  pages = {517--518},
   authorlist = {[{u'middle': u'W.', u'last': u'Tukey', u'first': u'John'}]},
   xxtitle = {Comments on {{\em Projection pursuit}}},
   year = {1985},
   PMnumber = {286},
-  title = {Discussion: Projection Pursuit},
   ISSN-L = {0003-1305},
+  fjournal = {The American Statistician},
+  pages = {517--518},
   CODEN = {ASTAAJ},
-  fjournal = {The American Statistician}
+  acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|}
 }
 
 @ARTICLE{Tukey:1965:TTSb,
   authorlist = {[{u'middle': u'W.', u'last': u'Tukey', u'first': u'John'}]},
   bibsource = {http://www.math.utah.edu/pub/bibnet/authors/t/tukey-john-w.bib; http://www.math.utah.edu/pub/tex/bib/amstat.bib},
-  acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
-  journal = {The American Statistician},
   author = {John W. Tukey},
+  acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
+  title = {The technical tools of statistics},
+  journal = {The American Statistician},
+  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
   bibdate = {Tue May 31 14:45:43 MDT 2011},
   number = {2},
   month = {????},
   volume = {19},
   ASnumber = {94},
-  ISSN-L = {0003-1305},
-  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
   year = {1965},
   PMnumber = {139},
-  title = {The technical tools of statistics},
+  ISSN-L = {0003-1305},
   pages = {23--28},
   CODEN = {ASTAAJ},
   fjournal = {The American Statistician}
@@ -88,19 +88,19 @@
   remark = {McCullagh bibliography duplicates this entry.},
   authorlist = {[{u'last': u'McGill', u'first': u'R.'}, {u'middle': u'W.', u'last': u'Tukey', u'first': u'John'}, {u'middle': u'A.', u'last': u'Larsen', u'first': u'W.'}]},
   bibsource = {http://www.math.utah.edu/pub/bibnet/authors/t/tukey-john-w.bib; http://www.math.utah.edu/pub/tex/bib/amstat.bib},
-  acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
-  journal = {The American Statistician},
   author = {R. McGill and John W. Tukey and W. A. Larsen},
+  acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
+  title = {Variations of {Box} plots},
+  journal = {The American Statistician},
+  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
   bibdate = {Tue May 31 14:45:43 MDT 2011},
   number = {??},
   month = {????},
   volume = {32},
   ASnumber = {123},
-  ISSN-L = {0003-1305},
-  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
   year = {1978},
   PMnumber = {231, 234},
-  title = {Variations of {Box} plots},
+  ISSN-L = {0003-1305},
   pages = {12--16},
   CODEN = {ASTAAJ},
   fjournal = {The American Statistician}
@@ -109,17 +109,17 @@
 @ARTICLE{Rousseeuw:1999:BBB,
   authorlist = {[{u'middle': u'J.', u'last': u'Rousseeuw', u'first': u'Peter'}, {u'last': u'Ruts', u'first': u'Ida'}, {u'middle': u'W.', u'last': u'Tukey', u'first': u'John'}]},
   bibsource = {http://www.amstat.org/publications/tas/toc_99.html; http://www.math.utah.edu/pub/tex/bib/amstat.bib},
-  acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
-  journal = {The American Statistician},
   author = {Peter J. Rousseeuw and Ida Ruts and John W. Tukey},
+  acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
+  title = {The Bagplot: {A} Bivariate Boxplot},
+  journal = {The American Statistician},
+  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
   bibdate = {Thu Oct 19 10:18:22 MDT 2000},
   number = {4},
   month = {11},
   volume = {53},
-  ISSN-L = {0003-1305},
-  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
   year = {1999},
-  title = {The Bagplot: {A} Bivariate Boxplot},
+  ISSN-L = {0003-1305},
   pages = {382--??},
   CODEN = {ASTAAJ},
   fjournal = {The American Statistician}
@@ -128,18 +128,18 @@
 @ARTICLE{Almond:2000:DCG,
   authorlist = {[{u'middle': u'G.', u'last': u'Almond', u'first': u'Russell'}, {u'last': u'Lewis', u'first': u'Charles'}, {u'middle': u'W.', u'last': u'Tukey', u'first': u'John'}, {u'last': u'Yan', u'first': u'Duanli'}]},
   bibsource = {http://www.amstat.org/publications/tas/; http://www.math.utah.edu/pub/tex/bib/amstat.bib},
+  author = {Russell G. Almond and Charles Lewis and John W. Tukey and Duanli Yan},
   acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
   URL = {http://www.amstat.org/publications/tas/Almond.htm},
+  title = {Displays for Comparing a Given State to Many Others},
   journal = {The American Statistician},
-  author = {Russell G. Almond and Charles Lewis and John W. Tukey and Duanli Yan},
+  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
   bibdate = {Fri Jul 20 11:18:01 MDT 2001},
   number = {2},
   month = {5},
   volume = {54},
-  ISSN-L = {0003-1305},
-  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
   year = {2000},
-  title = {Displays for Comparing a Given State to Many Others},
+  ISSN-L = {0003-1305},
   pages = {89--??},
   CODEN = {ASTAAJ},
   fjournal = {The American Statistician}
@@ -148,19 +148,19 @@
 @ARTICLE{Tukey:1980:WNB,
   authorlist = {[{u'middle': u'W.', u'last': u'Tukey', u'first': u'John'}]},
   bibsource = {http://www.math.utah.edu/pub/bibnet/authors/t/tukey-john-w.bib; http://www.math.utah.edu/pub/tex/bib/amstat.bib},
-  acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
-  journal = {The American Statistician},
   author = {John W. Tukey},
+  acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
+  title = {We need both exploratory and confirmatory},
+  journal = {The American Statistician},
+  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
   bibdate = {Tue May 31 14:45:43 MDT 2011},
   number = {??},
   month = {????},
   volume = {34},
   ASnumber = {131},
-  ISSN-L = {0003-1305},
-  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
   year = {1980},
   PMnumber = {257},
-  title = {We need both exploratory and confirmatory},
+  ISSN-L = {0003-1305},
   pages = {23--25},
   CODEN = {ASTAAJ},
   fjournal = {The American Statistician}
@@ -169,19 +169,19 @@
 @ARTICLE{Tukey:1947:QIO,
   authorlist = {[{u'middle': u'W.', u'last': u'Tukey', u'first': u'John'}]},
   bibsource = {http://www.math.utah.edu/pub/bibnet/authors/t/tukey-john-w.bib; http://www.math.utah.edu/pub/tex/bib/amstat.bib},
-  acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
-  journal = {The American Statistician},
   author = {John W. Tukey},
+  acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
+  title = {Question 4: Infinite observations},
+  journal = {The American Statistician},
+  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
   bibdate = {Tue May 31 14:45:43 MDT 2011},
   number = {3},
   month = {????},
   volume = {1},
   ASnumber = {17},
-  ISSN-L = {0003-1305},
-  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
   year = {1947},
   PMnumber = {17},
-  title = {Question 4: Infinite observations},
+  ISSN-L = {0003-1305},
   pages = {17--18},
   CODEN = {ASTAAJ},
   fjournal = {The American Statistician}
@@ -190,19 +190,19 @@
 @ARTICLE{Rathbun:1972:RPC,
   authorlist = {[{u'middle': u'B.', u'last': u'Rathbun', u'first': u'Daniel'}, {u'middle': u'Allen', u'last': u'Wallis', u'first': u'W.'}, {u'last': u'Mosteller', u'first': u'Frederick'}, {u'middle': u'J.', u'last': u'Coale', u'first': u'Ansley'}, {u'middle': u'M.', u'last': u'Densen', u'first': u'Paul'}, {u'last': u'Fabricant', u'first': u'Solomon'}, {u'middle': u'D.', u'last': u'Fisher', u'first': u'Robert'}, {u'middle': u'Braddock', u'last': u'Hickman', u'first': u'W.'}, {u'last': u'Kruskal', u'first': u'William'}, {u'last': u'Lebergott', u'first': u'Stanley'}, {u'middle': u'M.', u'last': u'Scammon', u'first': u'Richard'}, {u'middle': u'H.', u'last': u'Shaw', u'first': u'William'}, {u'middle': u'D.', u'last': u'Stella', u'first': u'Frank'}, {u'middle': u'A.', u'last': u'Suffridge', u'first': u'James'}, {u'middle': u'W.', u'last': u'Tukey', u'first': u'John'}]},
   bibsource = {http://www.math.utah.edu/pub/bibnet/authors/t/tukey-john-w.bib; http://www.math.utah.edu/pub/tex/bib/amstat.bib; JSTOR database},
+  author = {Daniel B. Rathbun and W. Allen Wallis and Frederick Mosteller and Ansley J. Coale and Paul M. Densen and Solomon Fabricant and Robert D. Fisher and W. Braddock Hickman and William Kruskal and Stanley Lebergott and Richard M. Scammon and William H. Shaw and Frank D. Stella and James A. Suffridge and John W. Tukey},
   acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
   URL = {http://www.jstor.org/stable/2682840},
+  title = {The Report of the {President's Commission on Federal Statistics}},
   journal = {The American Statistician},
-  author = {Daniel B. Rathbun and W. Allen Wallis and Frederick Mosteller and Ansley J. Coale and Paul M. Densen and Solomon Fabricant and Robert D. Fisher and W. Braddock Hickman and William Kruskal and Stanley Lebergott and Richard M. Scammon and William H. Shaw and Frank D. Stella and James A. Suffridge and John W. Tukey},
+  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
   bibdate = {Tue May 31 10:58:18 2011},
   number = {1},
   month = {2},
   volume = {26},
-  ISSN-L = {0003-1305},
-  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
   year = {1972},
   PMnumber = {none},
-  title = {The Report of the {President's Commission on Federal Statistics}},
+  ISSN-L = {0003-1305},
   pages = {15--18},
   CODEN = {ASTAAJ},
   fjournal = {The American Statistician}
@@ -211,19 +211,19 @@
 @ARTICLE{Tukey:1949:MSFb,
   authorlist = {[{u'middle': u'W.', u'last': u'Tukey', u'first': u'John'}]},
   bibsource = {http://www.math.utah.edu/pub/bibnet/authors/t/tukey-john-w.bib; http://www.math.utah.edu/pub/tex/bib/amstat.bib},
-  acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
-  journal = {The American Statistician},
   author = {John W. Tukey},
+  acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
+  title = {Memorandum on statistics in the {Federal Government}, {Part II}},
+  journal = {The American Statistician},
+  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
   bibdate = {Tue May 31 14:45:43 MDT 2011},
   number = {2},
   month = {????},
   volume = {3},
   ASnumber = {23},
-  ISSN-L = {0003-1305},
-  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
   year = {1949},
   PMnumber = {33},
-  title = {Memorandum on statistics in the {Federal Government}, {Part II}},
+  ISSN-L = {0003-1305},
   pages = {12--16},
   CODEN = {ASTAAJ},
   fjournal = {The American Statistician}
@@ -233,19 +233,19 @@
   remark = {McCullagh bibliography duplicates this entry.},
   authorlist = {[{u'middle': u'W.', u'last': u'Tukey', u'first': u'John'}]},
   bibsource = {http://www.math.utah.edu/pub/bibnet/authors/t/tukey-john-w.bib; http://www.math.utah.edu/pub/tex/bib/amstat.bib},
-  acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
-  journal = {The American Statistician},
   author = {John W. Tukey},
+  acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
+  title = {Answer to question 21: Maximum likelihood estimates, efficiency},
+  journal = {The American Statistician},
+  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
   bibdate = {Tue May 31 14:45:43 MDT 2011},
   number = {4},
   month = {????},
   volume = {3},
   ASnumber = {33},
-  ISSN-L = {0003-1305},
-  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
   year = {1949},
   PMnumber = {34, 47},
-  title = {Answer to question 21: Maximum likelihood estimates, efficiency},
+  ISSN-L = {0003-1305},
   pages = {12--12},
   CODEN = {ASTAAJ},
   fjournal = {The American Statistician}
@@ -254,18 +254,18 @@
 @ARTICLE{Tukey:1985:CMI,
   authorlist = {[{u'middle': u'W.', u'last': u'Tukey', u'first': u'John'}]},
   bibsource = {http://www.math.utah.edu/pub/bibnet/authors/t/tukey-john-w.bib; http://www.math.utah.edu/pub/tex/bib/amstat.bib},
-  acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
-  journal = {The American Statistician},
   author = {John W. Tukey},
+  acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
+  title = {Comments on {{\em More intelligent statistical software and statistical expert systems: Future directions}}},
+  journal = {The American Statistician},
+  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
   bibdate = {Sun Jun 05 14:53:27 2011},
   number = {??},
   month = {????},
   volume = {39},
-  ISSN-L = {0003-1305},
-  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
   year = {1985},
   PMnumber = {285},
-  title = {Comments on {{\em More intelligent statistical software and statistical expert systems: Future directions}}},
+  ISSN-L = {0003-1305},
   pages = {12--14},
   CODEN = {ASTAAJ},
   fjournal = {The American Statistician}
@@ -274,20 +274,20 @@
 @ARTICLE{Goodall:1998:CUR,
   authorlist = {[{u'middle': u'R.', u'last': u'Goodall', u'first': u'Colin'}, {u'last': u'Kafadar', u'first': u'Karen'}, {u'middle': u'W.', u'last': u'Tukey', u'first': u'John'}]},
   bibsource = {http://www.amstat.org/publications/tas/toc_98.html; http://www.math.utah.edu/pub/tex/bib/amstat.bib},
+  author = {Colin R. Goodall and Karen Kafadar and John W. Tukey},
   acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
   URL = {http://www.amstat.org/publications/tas/abstracts_98/goodall.html; http://www.jstor.org/stable/2685467},
+  title = {Computing and Using Rural versus Urban Measures in Statistical Applications},
   journal = {The American Statistician},
-  author = {Colin R. Goodall and Karen Kafadar and John W. Tukey},
+  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
   bibdate = {Thu Oct 19 10:18:19 MDT 2000},
   number = {2},
   month = {5},
   volume = {52},
   ASnumber = {162},
-  ISSN-L = {0003-1305},
-  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
   year = {1998},
   PMnumber = {423},
-  title = {Computing and Using Rural versus Urban Measures in Statistical Applications},
+  ISSN-L = {0003-1305},
   pages = {101--111},
   CODEN = {ASTAAJ},
   fjournal = {The American Statistician}
