In bibulous.py, I removed the loop over user-defined variables and instead simply added the user-defined variables to the regular list of variables to loop over when replacing strings in templates. This cleaned up the code a bit and makes it more consistent.

--- a/test/test1.bib
+++ b/test/test1.bib
@@ -313,7 +313,7 @@
 }
 
 %% Test that the "edition_ordinal" is properly generated from the "edition" field.
-@edition_ordinal{edition_ordinal,
+@EDITION_ORDINAL{edition_ordinal,
   title = {Principles of Optics},
   year = {1999},
   author = {Max Born and Emil Wolf},
