--- a/test/test5.bib
+++ b/test/test5.bib
@@ -3,7 +3,7 @@
   englishtitle = {Commentaries on the Gallic War},
   language = {Latin},
   author = {Gaius Julius Caesar},
-  year = -145
+  year = -45
 }
 
 @dialogue{cicero,
@@ -50,7 +50,7 @@
   publisher_ja = {中文出版社},
   publisher = {Chūbun shuppansha},
   title_ja = {禪學叢書},
-  title_romaji = {Zengaku sôsho},
+  title_romaji = {Zengaku sōsho},
   title = {Collected Materials for the Study of Zen},
   volume = {10},
   year = {1974-1977}
