Large changes to the code in this commit, in order to implement templates for generating reference labels and sortkeys.
These changes begin with introducing the 'SPECIAL-TEMPLATES' section to the style files, with two standard entries: 'citelabel' and 'sortkey'. In order to make this work well, I added a couple of new special variables: '<citenum>', '<citekey>', and '<citealpha>'. Moreover, since many citation styles use pieces of names in their reference labels, I also added the special fields '<name.first>', '<name.last>', '<name.middle>', '<name.prefix>', and '<name.suffix>', where "name" is tied first to the list of authors and then to the list of editors (if no "author" field is present) by default.

The tests within the testing suite were all updated to reflect the change, as were the templates in the "templates/" directory.

--- a/test/test1.bib
+++ b/test/test1.bib
@@ -321,20 +321,6 @@
   edition = 7
 }
 
-%% Test that the citation reference label is generated correctly.
-@CITATION_LABEL{citation_label1,
-  title = {Looney tunes},
-  author = "Daffy D. Duck",
-  year = {2001},
-}
-
-%% Test that the citation reference label is generated correctly, this time when no author but only editor.
-@CITATION_LABEL{citation_label2,
-  title = {Looney tunes},
-  editor = "Daffy D. Duck",
-  year = {2001},
-}
-
 %% Test having an entry with capitalized fields.
 @CAPITALIZED_FIELD_NAMES1{capitalized_field_names1,
     AUTHOR="H. Schmidt",
@@ -361,4 +347,10 @@
            français langue étrangère
            mañana olé},
   year = 2222
+}
+
+@ARABIC{arabic,
+  author = {Someone Who Speaks Arabic},
+  title = {सच्चिदानन्द हीरानन्द वात्स्यायन},
+  year = 2013
 }
