--- a/test/test4.bib
+++ b/test/test4.bib
@@ -47,7 +47,7 @@
   year = {2009},
 }
 
-@ARTICLE{Blouke20000,
+@ARTICLE{Blouke2000,
   title = {Sensors and Camera Systems for Scientific, Industrial, and Digital Photography Applications},
   year = {2000},
   volume = 6501,
@@ -105,7 +105,7 @@
 }
 
 @ARTICLE{Strangekey,
-  title = {Noting of consequence},
+  title = {Nothing of consequence},
   author = {Mister Aaa},
   year = {1901}
 }
@@ -139,7 +139,8 @@
   year = {2001},
   sortyear = 1901,
   sorttitle = {Wartime ideology and the American animated cartoon},
-  sortname = {Elle Kwok-Yin Ting}
+  sortname = {Ting},
+  writer = {Elle Kwok-Yin Ting}
 }
 
 %% Test that the citation is sorted by "Gemert" or "van Gemert" depending on the option "sort_with_prefix".
