Created a 'nested_templates' list as a Bibdata class attribute, in preparation for allowing nested templates.\n\nAlso moved some code in format_bibitem() into insert_specials(), the latter of which then expanded to add user-defined special fields. In 'test1' of the testing suite, I added a test to check that this works properly.

--- a/test/test1.bib
+++ b/test/test1.bib
@@ -354,3 +354,10 @@
   title = {सच्चिदानन्द हीरानन्द वात्स्यायन},
   year = 2013
 }
+
+@USER_DEFINED_FIELD{user_defined_field,
+  著者名 = {Natsume Soseki},
+  title = {Michikusa},
+  institution = {Tuttle},
+  year = 1915
+}
