Added 'validate_templatestr()' to bibulous.py, providing a single location where we can put all of our checks to verify that a template string is formatted correctly.

--- a/test/test7.bib
+++ b/test/test7.bib
@@ -133,6 +133,7 @@
   year = {2012}
 }
 
+%% Test that "sortyear", "sorttitle", and "sortname" are working correctly.
 @ARTICLE{Bunny1,
   title = {Looney tunes},
   author = "Bugs Bunny",
