Modified test5 in the testing suite to use the new special template for creating user-defined variables. Also added a purely Japanese template into test5. And everything passes fine.

--- a/test/test5.bib
+++ b/test/test5.bib
@@ -44,14 +44,38 @@
 %% I fixed a couple of typos from the original, and modified the field names.
 @collection{柳田1974,
   address_ja = {京都},
-  address = {Kyōto},
+  address_en = {Kyōto},
   editor_ja = {柳田聖山},
-  editor = {Yanagida Seizan},
+  editor_en = {Yanagida Seizan},
   publisher_ja = {中文出版社},
   publisher = {Chūbun shuppansha},
   title_ja = {禪學叢書},
   title_romaji = {Zengaku sōsho},
-  title = {Collected Materials for the Study of Zen},
+  title_en = {Collected Materials for the Study of Zen},
   volume = {10},
   year = {1974-1977}
 }
+
+%% Add an another entry for use in a multilingual template, so that a user can switch between languages using an option keyword.
+@COLLECTION{Tsuruta2006,
+  address_ja = {東京},
+  address_en = {T{\=o}ky{\=o}},
+  author_ja = {鶴田　匡夫},
+  author_en = {Tadao Tsuruta},
+  publisher_ja = {新技術コミュニケーションズ},
+  publisher_en = {Shin'gijutsu Communications},
+  title_ja = {光の鉛筆},
+  title_romaji = {Hikari no empitsu},
+  title_en = {Pencil of light},
+  volume = 7,
+  year = 2006
+}
+
+@本{漱石1906,
+  題名 = {草枕},
+  著者名 = {夏目 漱石},
+  年 = 1906,
+  year = 1906
+}
+
+
