--- a/test/test5.bib
+++ b/test/test5.bib
@@ -45,8 +45,8 @@
 @collection{柳田1974,
   address_ja = {京都},
   address_en = {Kyōto},
-  editor_ja = {柳田聖山},
-  editor_en = {Yanagida Seizan},
+  editor_ja = {柳田 聖山},
+  editor_en = {Seizan Yanagida},
   publisher_ja = {中文出版社},
   publisher = {Chūbun shuppansha},
   title_ja = {禪學叢書},
