Changed .bib files in the testing suite so that none of the entries use a '.' in the entry key. This is the first step towards incorporating namelist formatting templates, since we will use a '.' as an accessor.

--- a/test/karger.bib
+++ b/test/karger.bib
@@ -8214,7 +8214,7 @@ Algorithm for Edge Connectivity},
 	pages ={204--206},
 	year =  1968}
 
-@Article{Moore:1.Lmax,
+@Article{Moore:1{.}Lmax,
   author = 	 {J. M. Moore},
   title = 	 {An {$n$}-Job, One Machine Sequencing Algorithm for
                   Minimizing the Number of Late Jobs},
