--- a/test/master.bib
+++ b/test/master.bib
@@ -1600,7 +1600,7 @@
   acknowledgement = ack-nhfb,
 }
 
-@Book{Adobe:AT1.190,
+@Book{Adobe:AT1{.}190,
   author =       "Adobe Systems Incorporated",
   title =        "{Adobe} Type 1 Font Format---Version 1.1",
   publisher =    pub-AW,
@@ -19651,7 +19651,7 @@
   acknowledgement = ack-nhfb,
 }
 
-@Article{Knuth:tex-3.0,
+@Article{Knuth:tex-3{.}0,
   author =       "Donald E. Knuth",
   title =        "Calling all Grand Wizards",
   journal =      j-TEXHAX,
