--- a/test/texstuff.bib
+++ b/test/texstuff.bib
@@ -3683,7 +3683,7 @@
                  rendering; Web applications design",
 }
 
-@Misc{comp.text.tex:1989:CTT,
+@Misc{comp.text{.}tex:1989:CTT,
   key =          "comp.text.tex",
   title =        "comp.text.tex",
   year =         "1989" # "\unskip--",
