Added the template_substitution() function into bibulous.py, allowing me to remove redundant code from each of the four subrouties where it is used. This provides a nice consolidation of code.

--- a/test/test5.bib
+++ b/test/test5.bib
@@ -23,7 +23,7 @@
 }
 
 @book{tacitus,
-  title = {Ab excessu divi Augusti},
+  title = {Ab Excessu divi Augusti},
   englishtitle = {Annals of Imperial Rome},
   language = {Latin},
   writer = {Publius Cornelius Tacitus},
