--- a/test/test4.bib
+++ b/test/test4.bib
@@ -56,30 +56,14 @@
   editor = {Morley M. Blouke and Nitin Sampat and Williams, Jr., George M. and Thomas Yeh}
 }
 
-%% Test sorting with an entry using a "nameabbrev" field.
-@ARTICLE{Fontaine1234,
-  author = {Jean de la Fontaine du Bois Joli},
-  title = {Something},
-  year = {1234},
-  nameabbrev = {Jean de la Fontaine > {JdlF.}}
-}
-
-%% The only difference between this entry and the one above, except for the entrykey, is in "nameabbrev".
-@ARTICLE{Fontaine1234a,
-  author = {Jean de la Fontaine du Bois Joli},
-  title = {Something},
-  year = {1234},
-  nameabbrev = {de la Fontaine > {dlF.}, du Bois > du}
-}
-
 @INCOLLECTION{Otobe2006,
-  author = {{乙部} {厳己} and Paul Horton},
-  yomi = {よしき おとべ and ポール ホートン},
-  author-english = {Yoshiki Otobe and Paul Horton},
-  title = {jBibTEXの使用法},
-  title-english = {How to use JBibTeX},
-  publisher = {ソフトバンクパブリッシング},
-  publisher-english = {Soft Bank Publishing},
+  author-ja = {{乙部} {厳己} and Paul Horton},
+  author-yomi = {よしき おとべ and ポール ホートン},
+  author-en = {Yoshiki Otobe and Paul Horton},
+  title-ja = {jBibTEXの使用法},
+  title-en = {How to use JBibTeX},
+  publisher-ja = {ソフトバンクパブリッシング},
+  publisher-en = {Soft Bank Publishing},
   year = {2006},
   pages = {17--24},
   alphalabel = "おとべ",
@@ -88,13 +72,13 @@
 
 %% The only difference between this entry and the previous is that the entry key is given in Japanese.
 @INCOLLECTION{乙部2006,
-  author = {{乙部} {厳己} and Paul Horton},
-  yomi = {よしき おとべ and ポール ホートン},
-  author-english = {Yoshiki Otobe and Paul Horton},
-  title = {jBibTEXの使用法},
-  title-english = {How to use JBibTeX},
-  publisher = {ソフトバンクパブリッシング},
-  publisher-english = {Soft Bank Publishing},
+  author-ja = {{乙部} {厳己} and Paul Horton},
+  author-yomi = {よしき おとべ and ポール ホートン},
+  author-en = {Yoshiki Otobe and Paul Horton},
+  title-ja = {jBibTEXの使用法},
+  title-en = {How to use JBibTeX},
+  publisher-ja = {ソフトバンクパブリッシング},
+  publisher-en = {Soft Bank Publishing},
   year = {2006},
   pages = {17--24},
   alphalabel = "おとべ",
